redaction/tests/compile_fail/classification_on_struct.stderr
error[E0277]: the trait bound `Inner: serde::Serialize` is not satisfied
 --> tests/compile_fail/classification_on_struct.rs:8:17
  |
8 | #[derive(Clone, Sensitive)]
  |                 ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `Inner`
 --> tests/compile_fail/classification_on_struct.rs:9:1
  |
9 | struct Inner {
  | ^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Inner` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Outer: serde::Serialize` is not satisfied
  --> tests/compile_fail/classification_on_struct.rs:14:17
   |
14 | #[derive(Clone, Sensitive)]
   |                 ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Serialize` is not implemented for `Outer`
  --> tests/compile_fail/classification_on_struct.rs:15:1
   |
15 | struct Outer {
   | ^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Outer` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Inner` cannot have a classification applied
  --> tests/compile_fail/classification_on_struct.rs:19:5
   |
14 | #[derive(Clone, Sensitive)]
   |                 --------- required by a bound introduced by this call
...
19 |     inner: Inner,
   |     ^^^^^ this type doesn't support classification policies
   |
help: the trait `Classifiable` is not implemented for `Inner`
  --> tests/compile_fail/classification_on_struct.rs:9:1
   |
 9 | struct Inner {
   | ^^^^^^^^^^^^
   = note: classifications work on String, Cow<str>, and containers of these types
   = note: for custom string-like types, implement `SensitiveValue`
   = help: the following other types implement trait `Classifiable`:
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Cow<'_, str>
             HashMap<K, V, S>
             HashSet<T, S>
             Result<T, E>
             Vec<T>
           and $N others
